<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/foto_fondo"
    tools:context=".Login.ActivityRegistrar"
    tools:ignore="ExtraText">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tvSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-60dp"
            android:text="@string/tv_sign"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            app:fontFamily="@font/montserrat" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/amarilloClaro"
            android:ems="10"
            android:hint="@string/et_name"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/amarilloClaro"
            android:ems="10"
            android:hint="@string/et_email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/amarilloClaro"
            android:ems="10"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/boton_redondeado"
            android:gravity="center"
            android:text="@string/et_create"
            android:textColor="@color/moradoOscuro"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progresbarreg"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp" />

</RelativeLayout>