<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/foto_fondo"
    tools:context=".Login.LoginActivity"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/email"
            android:layout_alignLeft="@+id/email"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="0dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tvSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_marginTop="-60dp"
            android:gravity="center"
            android:text="@string/tv_title"
            android:textColor="@android:color/white"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@+id/tvSign"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/amarilloClaro"
            android:ems="10"
            android:hint="@string/et_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@+id/tvSign"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/amarilloClaro"
            android:ems="10"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textColorHint="@android:color/white" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentBottom="false"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/boton_iniciarsesion"

            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/tv_login"
            android:textAlignment="center"
            android:textColor="@color/amarilloClaro"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentBottom="false"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/boton_redondeado"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/tv_sign"
            android:textAlignment="center"
            android:textColor="@color/moradoOscuro"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/btn_recuperar"
            android:textColor="@color/colorAmarillo"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp" />

</RelativeLayout>